--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -135,7 +135,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-offset-4 col-md-4">
+            <div class="col-md-4">
+                <div class="form-group" id="DivSucursalCxp">
+                    <label for="IdSucursal_cxp">Sucursal compra*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal_cxp, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal_cxp" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal_cxp, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-4">
                 <div class="form-group">
                     <label for="co_plazo">Plazo*</label>
                     @Html.TextBoxFor(q => q.co_plazo, new { @class = "form-control", @id = "co_plazo" })
@@ -551,12 +558,9 @@
         e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
         e.customArgs["pre_fecha"] = moment(co_FechaFactura.GetDate()).format('DD/MM/YYYY');
     }
-
-    $(function () {
-
-        $("#IdSucursal").change(function () {
-            cargar_bodega();
-        });
+    ValidarCompraSucursales();
+    $("#IdSucursal").change(function () {
+        cargar_bodega();
     });
 
 
@@ -588,10 +592,14 @@
     });
     $("#co_plazo").change(function () {
         var plazo = Number($("#co_plazo").val());
-        if (plazo > 0) {
-            var new_date = moment(co_FechaFactura.GetDate(), "DD-MM-YYYY").add(plazo, 'days');
-            co_FechaFactura_vct.SetDate(new Date(new_date));
-        };
+        if (plazo != 0) {
+
+            var date = new Date(moment(co_FechaFactura.GetValue(), "DD/MM/YYYY").add(plazo, 'days'));
+            co_FechaFactura_vct.SetValue(date);
+        }
+        else
+            co_FechaFactura_vct.SetValue(co_FechaFactura.GetValue());
+
     });
 
     $("#IdIden_credito").change(function () {
@@ -741,7 +749,8 @@
             co_valoriva : $("#co_valoriva").val(),
             co_total : $("#co_total").val(),
             observacion: $("#observacion").val(),
-            IdTransaccionSession: $("#IdTransaccionSession").val()
+                IdTransaccionSession: $("#IdTransaccionSession").val(),
+                IdSucursal_cxp: $("#IdSucursal_cxp").val(),
             }
             $.ajax({
                 type: 'POST',
@@ -765,13 +774,11 @@
             });
         }
     };
-
-    function get_info_proveedor() {
-
-
+    function get_info_proveedor() {      
 
         if (IdProveedor.GetValue() > 0)  {
             var datos = {
+                IdEmpresa: $("#IdEmpresa").val(),
                 IdProveedor: IdProveedor.GetValue()
             }
             $.ajax({
@@ -784,23 +791,43 @@
                 dataType: 'json',
                 contentType: 'application/json; charset=utf-8',
                 success: function (data) {
-                    if (data.pr_plazo == 0)
-                    {
-                        $("#co_plazo").val(1);
-                    }
-                    else
-                    {
-                        var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
-                        co_FechaFactura_vct.SetValue(new Date(moment(date).format("DD/MM/YYYY")));
-                    }
 
+                    $("#co_plazo").val(data.pr_plazo);
 
+                    var date = moment(co_FechaFactura.GetValue(), "DD-MM-YYYY").add(data.pr_plazo, 'days');
+                    co_FechaFactura_vct.SetValue(new Date(moment(date).format("DD/MM/YYYY")));
                 },
                 error: function (error) {
                 }
             });
+            ValidarCompraSucursales();
         }
     };
+
+    function ValidarCompraSucursales() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdProveedor: IdProveedor.GetValue()
+        }
+        $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("ValidarCompraSucursales", "Deudas", new { Area = "CuentasPorPagar" })',
+                async: false,
+                bDeferRender: true,
+                bProcessing: true,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data == "S") {
+                    $("#DivSucursalCxp").show();
+                } else
+                    $("#DivSucursalCxp").hide();
+                },
+                error: function (error) {
+                }
+            });
+    }
 
     function cargar_bodega() {
         $("#IdBodega").empty();
@@ -856,8 +883,10 @@
              function armar_diario_retencion() {
 
                 var datos = {
+                    IdEmpresa: $("#IdEmpresa").val(),
                     IdProveedor: IdProveedor.GetValue(),
-                    IdTransaccionSession: $("#IdTransaccionSession").val()
+                    IdTransaccionSession: $("#IdTransaccionSession").val(),
+                    IdSucursal_cxp: $("#IdSucursal_cxp").val(),
                 }
                 $.ajax({
                     type: 'POST',
