--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
@@ -249,7 +249,7 @@
 
                 var datos = {
                     IdEmpresa: $("#IdEmpresa").val(),
-                    IdProveedor: IdProveedor.GetValue(),
+                    IdProveedor: $("#IdProveedor").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val(),
                     IdSucursal_cxp: $("#IdSucursal_cxp").val(),
                 }
