--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
@@ -225,7 +225,7 @@
     function armar_diario_retencion() {
                 var datos = {
                     IdEmpresa: $("#IdEmpresa").val(),
-                    IdProveedor: IdProveedor.GetValue(),
+                    IdProveedor: $("#IdProveedor").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val(),
                     IdSucursal_cxp: $("#IdSucursal_cxp").val(),
                 }
