--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
@@ -198,7 +198,7 @@
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="IdSolicitudPago"># Solicitud*</label>
+                    <label for="IdSolicitudPago"># Solicitud</label>
                     @Html.TextBoxFor(q => q.IdSolicitudPago, new { @class = "form-control", @id = "IdSolicitudPago" })
                     @Html.ValidationMessageFor(q => q.IdSolicitudPago, "", new { @class = "text-danger" })
                 </div>
