--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
@@ -139,7 +139,7 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdBanco_acreditacion">Tipo flujo</label>
+                    <label for="IdBanco_acreditacion">Tipo flujo*</label>
                     @Html.Partial("_CmbFlujo_Deposito", Model.IdTipoFlujo)
                     @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
                 </div>
