--- a/ERP/Core.Erp.Web/Areas/General/Views/Reporte/Disenar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Reporte/Disenar.cshtml
@@ -1,7 +1,7 @@
 ﻿
-@model Core.Erp.Info.Banco.ba_Banco_Cuenta_Info
+@model Core.Erp.Info.General.tb_sis_reporte_x_tb_empresa_Info
 @{
-    ViewBag.Title = "Diseño de cheques";
+    ViewBag.Title = "Diseño de reportes";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -9,16 +9,15 @@
     Layout = "~/Areas/Reportes/Views/Layout/_Layout_filtros.cshtml";
 }
 
-@using (Html.BeginForm("Disenar", "BancoCuenta", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Disenar", "Reporte", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa"})
-    @Html.HiddenFor(q => q.IdBanco, new { @id = "IdBanco" })
-    @Html.HiddenFor(q => q.Imprimir_Solo_el_cheque, new { @id = "Imprimir_Solo_el_cheque" })
+    @Html.HiddenFor(q => q.CodReporte, new { @id = "CodReporte" })
 
     @Html.DevExpress().ReportDesigner(settings =>
     {
         settings.Name = "ReportDesigner";
-        settings.ClientSideEvents.BeginCallback = "function(s,e){  e.customArgs['fx_IdBanco'] = $('#IdBanco').val(); }";
-        settings.SaveCallbackRouteValues = new { Controller = "BancoCuenta", Action = "Disenar", Area = "Banco" };
-    }).Bind(Model.ReporteCheque).GetHtml()
+        settings.ClientSideEvents.BeginCallback = "function(s,e){  e.customArgs['fx_CodReporte'] = $('#CodReporte').val(); }";
+        settings.SaveCallbackRouteValues = new { Controller = "Reporte", Action = "Disenar", Area = "General" };
+    }).Bind(Model.ReporteDisenio).GetHtml()
 }
